reference/5.1/Microsoft.PowerShell.Management/Copy-ItemProperty.md
---
external help file: Microsoft.PowerShell.Commands.Management.dll-Help.xml
keywords: powershell,cmdlet
Locale: en-US
Module Name: Microsoft.PowerShell.Management
ms.date: 10/18/2018
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.management/copy-itemproperty?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Copy-ItemProperty
ms.openlocfilehash: 7af5a414a84bad8048c997803c94c0d94e549989
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: zh-CN
ms.lasthandoff: 07/07/2020
ms.locfileid: "93198315"
---
# <span data-ttu-id="e46f7-103">Copy-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="e46f7-103">Copy-ItemProperty</span></span>

## <span data-ttu-id="e46f7-104">摘要</span><span class="sxs-lookup"><span data-stu-id="e46f7-104">SYNOPSIS</span></span>

<span data-ttu-id="e46f7-105">将属性和值从指定的位置复制到另一个位置。</span><span class="sxs-lookup"><span data-stu-id="e46f7-105">Copies a property and value from a specified location to another location.</span></span>

## <span data-ttu-id="e46f7-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="e46f7-106">SYNTAX</span></span>

### <span data-ttu-id="e46f7-107">Path（默认值）</span><span class="sxs-lookup"><span data-stu-id="e46f7-107">Path (Default)</span></span>

```
Copy-ItemProperty [-Path] <String[]> [-Name] <String> [-Destination] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

### <span data-ttu-id="e46f7-108">LiteralPath</span><span class="sxs-lookup"><span data-stu-id="e46f7-108">LiteralPath</span></span>

```
Copy-ItemProperty -LiteralPath <String[]> [-Name] <String> [-Destination] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

## <span data-ttu-id="e46f7-109">DESCRIPTION</span><span class="sxs-lookup"><span data-stu-id="e46f7-109">DESCRIPTION</span></span>

<span data-ttu-id="e46f7-110">`Copy-ItemProperty`Cmdlet 将属性和值从指定的位置复制到另一个位置。</span><span class="sxs-lookup"><span data-stu-id="e46f7-110">The `Copy-ItemProperty` cmdlet copies a property and value from a specified location to another location.</span></span>
<span data-ttu-id="e46f7-111">例如，可以使用此 cmdlet 将一个或多个注册表条目从一个注册表项复制到另一个注册表项。</span><span class="sxs-lookup"><span data-stu-id="e46f7-111">For instance, you can use this cmdlet to copy one or more registry entries from one registry key to another registry key.</span></span>

## <span data-ttu-id="e46f7-112">示例</span><span class="sxs-lookup"><span data-stu-id="e46f7-112">EXAMPLES</span></span>

### <span data-ttu-id="e46f7-113">示例 1：将属性从一个注册表项复制到另一个注册表项</span><span class="sxs-lookup"><span data-stu-id="e46f7-113">Example 1: Copy a property from a registry key to another registry key</span></span>

<span data-ttu-id="e46f7-114">此命令会将名为 "T.myproperty" 的属性从 "MyApplication" 注册表项复制到 "MyApplicationRev2" 注册表项。</span><span class="sxs-lookup"><span data-stu-id="e46f7-114">This command copies the property named "MyProperty" from the "MyApplication" registry key to the "MyApplicationRev2" registry key.</span></span>

```powershell
Copy-ItemProperty -Path "MyApplication" -Destination "HKLM:\Software\MyApplicationRev2" -Name "MyProperty"
```

## <span data-ttu-id="e46f7-115">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="e46f7-115">PARAMETERS</span></span>

### <span data-ttu-id="e46f7-116">-Credential</span><span class="sxs-lookup"><span data-stu-id="e46f7-116">-Credential</span></span>

<span data-ttu-id="e46f7-117">指定有权执行此操作的用户帐户。</span><span class="sxs-lookup"><span data-stu-id="e46f7-117">Specifies a user account that has permission to perform this action.</span></span>
<span data-ttu-id="e46f7-118">默认为当前用户。</span><span class="sxs-lookup"><span data-stu-id="e46f7-118">The default is the current user.</span></span>

<span data-ttu-id="e46f7-119">键入用户名，如“User01”或“Domain01\User01”；或输入 **PSCredential** 对象，如 `Get-Credential` cmdlet 生成的一个 PSCredential 对象。</span><span class="sxs-lookup"><span data-stu-id="e46f7-119">Type a user name, such as "User01" or "Domain01\User01", or enter a **PSCredential** object, such as one generated by the `Get-Credential` cmdlet.</span></span>
<span data-ttu-id="e46f7-120">如果键入用户名，则将提示你输入密码。</span><span class="sxs-lookup"><span data-stu-id="e46f7-120">If you type a user name, you are prompted for a password.</span></span>

> [!WARNING]
> <span data-ttu-id="e46f7-121">随同 Windows PowerShell 一起安装的任何提供程序都不支持此参数。</span><span class="sxs-lookup"><span data-stu-id="e46f7-121">This parameter is not supported by any providers installed with Windows PowerShell.</span></span>

```yaml
Type: System.Management.Automation.PSCredential
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: Current user
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="e46f7-122">-Destination</span><span class="sxs-lookup"><span data-stu-id="e46f7-122">-Destination</span></span>

<span data-ttu-id="e46f7-123">指定目标位置的路径。</span><span class="sxs-lookup"><span data-stu-id="e46f7-123">Specifies the path to the destination location.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="e46f7-124">-Exclude</span><span class="sxs-lookup"><span data-stu-id="e46f7-124">-Exclude</span></span>

<span data-ttu-id="e46f7-125">指定此 cmdlet 将排除的一个项或多个项（作为一个字符串数组）。</span><span class="sxs-lookup"><span data-stu-id="e46f7-125">Specifies, as a string array, an item or items that this cmdlet excludes.</span></span>
<span data-ttu-id="e46f7-126">此参数值使 **Path** 参数有效。</span><span class="sxs-lookup"><span data-stu-id="e46f7-126">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="e46f7-127">请输入路径元素或模式，例如“\*.txt”。</span><span class="sxs-lookup"><span data-stu-id="e46f7-127">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="e46f7-128">允许使用通配符。</span><span class="sxs-lookup"><span data-stu-id="e46f7-128">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="e46f7-129">-Filter</span><span class="sxs-lookup"><span data-stu-id="e46f7-129">-Filter</span></span>

<span data-ttu-id="e46f7-130">以提供程序的格式或语言指定筛选器。</span><span class="sxs-lookup"><span data-stu-id="e46f7-130">Specifies a filter in the format or language of the provider.</span></span>
<span data-ttu-id="e46f7-131">此参数值使 **Path** 参数有效。</span><span class="sxs-lookup"><span data-stu-id="e46f7-131">The value of this parameter qualifies the **Path** parameter.</span></span>

<span data-ttu-id="e46f7-132">筛选器的语法（包括通配符字符的使用），具体取决于提供程序。</span><span class="sxs-lookup"><span data-stu-id="e46f7-132">The syntax of the filter, including the use of wildcard characters, depends on the provider.</span></span>
<span data-ttu-id="e46f7-133">筛选器比其他参数更有效，因为提供程序在 cmdlet 获取对象时应用筛选器，而不是在检索对象后再对其进行筛选。</span><span class="sxs-lookup"><span data-stu-id="e46f7-133">Filters are more efficient than other parameters, because the provider applies them when the cmdlet gets the objects rather than having PowerShell filter the objects after they are retrieved.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="e46f7-134">-Force</span><span class="sxs-lookup"><span data-stu-id="e46f7-134">-Force</span></span>

<span data-ttu-id="e46f7-135">强制运行命令而不要求用户确认。</span><span class="sxs-lookup"><span data-stu-id="e46f7-135">Forces the command to run without asking for user confirmation.</span></span>
<span data-ttu-id="e46f7-136">不同提供程序有不同的实现。</span><span class="sxs-lookup"><span data-stu-id="e46f7-136">Implementation varies from provider to provider.</span></span>
<span data-ttu-id="e46f7-137">有关详细信息，请参阅 [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md)。</span><span class="sxs-lookup"><span data-stu-id="e46f7-137">For more information, see [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="e46f7-138">-Include</span><span class="sxs-lookup"><span data-stu-id="e46f7-138">-Include</span></span>

<span data-ttu-id="e46f7-139">指定此 cmdlet 将在操作中包含的一个项或多个项（作为一个字符串数组）。</span><span class="sxs-lookup"><span data-stu-id="e46f7-139">Specifies, as a string array, an item or items that this cmdlet includes in the operation.</span></span>
<span data-ttu-id="e46f7-140">此参数值使 **Path** 参数有效。</span><span class="sxs-lookup"><span data-stu-id="e46f7-140">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="e46f7-141">请输入路径元素或模式，例如“\*.txt”。</span><span class="sxs-lookup"><span data-stu-id="e46f7-141">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="e46f7-142">允许使用通配符。</span><span class="sxs-lookup"><span data-stu-id="e46f7-142">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="e46f7-143">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="e46f7-143">-LiteralPath</span></span>

<span data-ttu-id="e46f7-144">指定此属性的当前位置的路径。</span><span class="sxs-lookup"><span data-stu-id="e46f7-144">Specifies the path to the current location of the property.</span></span>
<span data-ttu-id="e46f7-145">与 **Path** 参数不同，**LiteralPath** 的值严格按照所键入的形式使用。</span><span class="sxs-lookup"><span data-stu-id="e46f7-145">Unlike the **Path** parameter, the value of **LiteralPath** is used exactly as it is typed.</span></span>
<span data-ttu-id="e46f7-146">不会将任何字符解释为通配符。</span><span class="sxs-lookup"><span data-stu-id="e46f7-146">No characters are interpreted as wildcards.</span></span>
<span data-ttu-id="e46f7-147">如果路径包括转义符，请将其括在单引号中。</span><span class="sxs-lookup"><span data-stu-id="e46f7-147">If the path includes escape characters, enclose it in single quotation marks.</span></span>
<span data-ttu-id="e46f7-148">单引号指示 PowerShell 不要将任何字符解释为转义序列。</span><span class="sxs-lookup"><span data-stu-id="e46f7-148">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: LiteralPath
Aliases: PSPath

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="e46f7-149">-Name</span><span class="sxs-lookup"><span data-stu-id="e46f7-149">-Name</span></span>

<span data-ttu-id="e46f7-150">指定要复制的属性的名称。</span><span class="sxs-lookup"><span data-stu-id="e46f7-150">Specifies the name of the property to be copied.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases: PSProperty

Required: True
Position: 2
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="e46f7-151">-PassThru</span><span class="sxs-lookup"><span data-stu-id="e46f7-151">-PassThru</span></span>

<span data-ttu-id="e46f7-152">返回一个代表你所处理的项目的对象。</span><span class="sxs-lookup"><span data-stu-id="e46f7-152">Returns an object representing the item with which you are working.</span></span>
<span data-ttu-id="e46f7-153">默认情况下，此 cmdlet 将不产生任何输出。</span><span class="sxs-lookup"><span data-stu-id="e46f7-153">By default, this cmdlet does not generate any output.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="e46f7-154">-Path</span><span class="sxs-lookup"><span data-stu-id="e46f7-154">-Path</span></span>

<span data-ttu-id="e46f7-155">指定要复制的属性的路径（作为一个字符串数组）。</span><span class="sxs-lookup"><span data-stu-id="e46f7-155">Specifies, as a string array, the path to the property to be copied.</span></span>

```yaml
Type: System.String[]
Parameter Sets: Path
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="e46f7-156">-UseTransaction</span><span class="sxs-lookup"><span data-stu-id="e46f7-156">-UseTransaction</span></span>
<span data-ttu-id="e46f7-157">在活动事务中使用该命令。</span><span class="sxs-lookup"><span data-stu-id="e46f7-157">Includes the command in the active transaction.</span></span>
<span data-ttu-id="e46f7-158">仅当正在执行事务时，此参数才有效。</span><span class="sxs-lookup"><span data-stu-id="e46f7-158">This parameter is valid only when a transaction is in progress.</span></span>
<span data-ttu-id="e46f7-159">有关详细信息，请参阅 about_Transactions。</span><span class="sxs-lookup"><span data-stu-id="e46f7-159">For more information, see about_Transactions.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: usetx

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="e46f7-160">-Confirm</span><span class="sxs-lookup"><span data-stu-id="e46f7-160">-Confirm</span></span>
<span data-ttu-id="e46f7-161">提示你在运行 cmdlet 之前进行确认。</span><span class="sxs-lookup"><span data-stu-id="e46f7-161">Prompts you for confirmation before running the cmdlet.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="e46f7-162">-WhatIf</span><span class="sxs-lookup"><span data-stu-id="e46f7-162">-WhatIf</span></span>

<span data-ttu-id="e46f7-163">显示运行该 cmdlet 时会发生什么情况。</span><span class="sxs-lookup"><span data-stu-id="e46f7-163">Shows what would happen if the cmdlet runs.</span></span>
<span data-ttu-id="e46f7-164">此 cmdlet 未运行。</span><span class="sxs-lookup"><span data-stu-id="e46f7-164">The cmdlet is not run.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="e46f7-165">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="e46f7-165">CommonParameters</span></span>

<span data-ttu-id="e46f7-166">此 cmdlet 支持通用参数： `-Debug` 、 `-ErrorAction` 、 `-ErrorVariable` 、、、、、、、 `-InformationAction` `-InformationVariable` `-OutVariable` `-OutBuffer` `-PipelineVariable` `-Verbose` `-WarningAction` 和 `-WarningVariable` 。</span><span class="sxs-lookup"><span data-stu-id="e46f7-166">This cmdlet supports the common parameters: `-Debug`, `-ErrorAction`, `-ErrorVariable`, `-InformationAction`, `-InformationVariable`, `-OutVariable`, `-OutBuffer`, `-PipelineVariable`, `-Verbose`, `-WarningAction`, and `-WarningVariable`.</span></span> <span data-ttu-id="e46f7-167">有关详细信息，请参阅 [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md)。</span><span class="sxs-lookup"><span data-stu-id="e46f7-167">For more information, see [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span></span>

## <span data-ttu-id="e46f7-168">输入</span><span class="sxs-lookup"><span data-stu-id="e46f7-168">INPUTS</span></span>

### <span data-ttu-id="e46f7-169">System.String</span><span class="sxs-lookup"><span data-stu-id="e46f7-169">System.String</span></span>

<span data-ttu-id="e46f7-170">可以通过管道将包含路径的字符串传递给此 cmdlet。</span><span class="sxs-lookup"><span data-stu-id="e46f7-170">You can pipe a string that contains a path to this cmdlet.</span></span>

## <span data-ttu-id="e46f7-171">输出</span><span class="sxs-lookup"><span data-stu-id="e46f7-171">OUTPUTS</span></span>

### <span data-ttu-id="e46f7-172">无或 System.Management.Automation.PSCustomObject</span><span class="sxs-lookup"><span data-stu-id="e46f7-172">None or System.Management.Automation.PSCustomObject</span></span>

<span data-ttu-id="e46f7-173">如果使用 Passthru 参数，则此 cmdlet 生成一个 **PsCustomObject** 对象，该对象表示已复制的项属性。</span><span class="sxs-lookup"><span data-stu-id="e46f7-173">When you use the **Passthru** parameter, this cmdlet generates a **PsCustomObject** representing the copied item property.</span></span>
<span data-ttu-id="e46f7-174">否则，此 cmdlet 将不生成任何输出。</span><span class="sxs-lookup"><span data-stu-id="e46f7-174">Otherwise, this cmdlet does not generate any output.</span></span>

## <span data-ttu-id="e46f7-175">注释</span><span class="sxs-lookup"><span data-stu-id="e46f7-175">NOTES</span></span>

<span data-ttu-id="e46f7-176">此 cmdlet 用于处理由任何提供程序公开的数据。</span><span class="sxs-lookup"><span data-stu-id="e46f7-176">This cmdlet is designed to work with the data exposed by any provider.</span></span> <span data-ttu-id="e46f7-177">若要列出会话中可用的提供程序，请键入 `Get-PSProvider`。</span><span class="sxs-lookup"><span data-stu-id="e46f7-177">To list the providers available in your session, type `Get-PSProvider`.</span></span> <span data-ttu-id="e46f7-178">有关详细信息，请参阅 about_Providers。</span><span class="sxs-lookup"><span data-stu-id="e46f7-178">For more information, see about_Providers.</span></span>

## <span data-ttu-id="e46f7-179">相关链接</span><span class="sxs-lookup"><span data-stu-id="e46f7-179">RELATED LINKS</span></span>

[<span data-ttu-id="e46f7-180">Clear-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="e46f7-180">Clear-ItemProperty</span></span>](Clear-ItemProperty.md)

[<span data-ttu-id="e46f7-181">Get-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="e46f7-181">Get-ItemProperty</span></span>](Get-ItemProperty.md)

[<span data-ttu-id="e46f7-182">Move-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="e46f7-182">Move-ItemProperty</span></span>](Move-ItemProperty.md)

[<span data-ttu-id="e46f7-183">New-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="e46f7-183">New-ItemProperty</span></span>](New-ItemProperty.md)

[<span data-ttu-id="e46f7-184">Rename-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="e46f7-184">Rename-ItemProperty</span></span>](Rename-ItemProperty.md)

[<span data-ttu-id="e46f7-185">Set-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="e46f7-185">Set-ItemProperty</span></span>](Set-ItemProperty.md)

[<span data-ttu-id="e46f7-186">Get-PSProvider</span><span class="sxs-lookup"><span data-stu-id="e46f7-186">Get-PSProvider</span></span>](Get-PSProvider.md)
